new changes requested by duy

--- a/public/Contact.html
+++ b/public/Contact.html
@@ -12,7 +12,7 @@
     <meta name="author" content="creative-wp">
 
     <!-- Titles========================== -->
-    <title>.:Mamathanh:.</title>
+    <title>.:Duy's Asiatische Spezialitäten:.</title>
 
     <!-- Favicons========================= -->
     <link rel="shortcut icon" href="images/bg/favicon.png">
