--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                             </div>
                             <div class="lets-talk-area">
                                 <a class="menu_res_btn" style="" href="#">Reservieren</a>
-                                <a class="menu_ber_btn" onclick="window.open('https://goo.gl/maps/pVBpS87D8KNEJ4e96', '_blank')">Abholen</a>
+                                <a class="menu_ber_btn" onclick="window.open('Contact.html', '_blank')">Abholen</a>
                             </div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
             <p><b>Genieße authentische asiatische Küche in unserem gemütlichen Familienbetrieb in Remchingen</b></p>
             <div class="banner-btn">
                 <a href="Contact.html">Reservieren</a>
-                <a onclick="window.open('https://goo.gl/maps/pVBpS87D8KNEJ4e96', '_blank');">Abholen</a>
+                <a onclick="window.open('Contact.html', '_blank');">Abholen</a>
             </div>
         </div>
     </section>
@@ -128,17 +128,16 @@
                                 </h5>
                             </div>
                         </div>
-                        <h1>Genieße Vietnam...<br>
+                        <h1>Vietnamesische Gastfreundschaft...<br>
                             bei Duy!</h1>
                         <p>Duy hat seinen Traum verwirklicht und zusammen mit seiner Familie ein vietnamesisches
                             Restaurant in Remchingen eröffnet. In Duy's Restaurant serviert er traditionelle
-                            Spezialitäten mit frischen Zutaten und legt Wert auf Authentizität.
+                            Spezialitäten und legt Wert auf Authentizität.
                             Gäste schätzen die gemütliche Atmosphäre und die herzliche Gastfreundschaft der Familie.
                         </p>
                         <p>
-                            Ein besonderer Fokus liegt auf der Verwendung regionaler Zutaten. Duy und seine Familie
-                            beziehen viele ihrer Zutaten von lokalen Lieferanten, um die bestmögliche Qualität und
-                            Frische zu gewährleisten. Sie achten auf saisonale Produkte und integrieren diese in ihre
+                            Duy und seine Familie kochen jederzeit frisch, um die bestmögliche Qualität zu gewährleisten.
+                            Sie achten auf hochwertige Produkte und integrieren diese in ihre
                             Gerichte. Dies ermöglicht es ihnen, ihre Gäste mit einer Vielfalt an Aromen und Geschmäckern
                             zu verwöhnen und ihnen eine authentische vietnamesische Küchenerfahrung zu bieten.
                         </p>
@@ -150,7 +149,7 @@
     </section>
 
     <section class="sushi_part_down">
-        <a href="#" class="sushi_down">
+        <a href="duy_speisekarte.pdf" target="_blank" class="sushi_down">
             <img src="images/bg/sushi-down.png" alt="">
             <div class="overlay d-flex align-items-center justify-content-center">
                 <h1><b>Unsere Speisekarte</b></h1>
@@ -161,7 +160,7 @@
     <section class="sushi_part">
         <div class="row">
             <div class="col-md-6 col-sm-6 col-xs-12 p-0">
-                <a href="Vietnamese Menu.html" class="sushi_left">
+                <a href="Contact.html" class="sushi_left">
                     <img src="images/bg/sushi-left.png" alt="">
                     <div class="overlay d-flex align-items-center justify-content-center">
                         <h1><b>Reservieren</b></h1>
@@ -169,7 +168,7 @@
                 </a>
             </div>
             <div class="col-md-6 col-sm-6 col-xs-12 p-0">
-                <a href="Sushi.html" class="sushi_left">
+                <a href="Contact.html" class="sushi_left">
                     <img src="images/bg/sushi-right.png" alt="">
                     <div class="overlay d-flex align-items-center justify-content-center">
                         <h1><b>Abholen</b></h1>
