new changes requested by duy

--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
                             bei Duy!</h1>
                         <p>Duy hat seinen Traum verwirklicht und zusammen mit seiner Familie ein vietnamesisches
                             Restaurant in Remchingen eröffnet. In Duy's Restaurant serviert er traditionelle
-                            Spezialitäten und legt Wert auf Authentizität.
+                            Spezialitäten mit unverfälschten Zutaten und legt Wert auf Authentizität.
                             Gäste schätzen die gemütliche Atmosphäre und die herzliche Gastfreundschaft der Familie.
                         </p>
                         <p>
