fix contact email

--- a/public/index.html
+++ b/public/index.html
@@ -354,7 +354,7 @@
                     <div class="col-md-4 col-sm-4">
                         <div class="footer-text">
                             <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                            <p>kontakt@sy-tam.de</p>
+                            <p>team@duy-restaurant.de</p>
                         </div>
                     </div>
                 </div>
