rework duys page to fit mamathanhs page

--- a/public/Contact.html
+++ b/public/Contact.html
@@ -220,17 +220,15 @@
                         <div class="contact-icon-text">
                             <span class="contact-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
                             <p><span>Adresse</span> <br><a style="color:cornflowerblue;text-decoration: underline;"
-                                                           href="https://goo.gl/maps/pVBpS87D8KNEJ4e96" target="_blank">Nöttinger
-                                Str.
-                                11, 75196 Remchingen</a>
+                                                           href="https://www.google.com/maps/place/Mama+Thanh/@49.0082411,8.374161,15z/data=!4m6!3m5!1s0x47970762af2fd2c3:0x6f215123fd207b14!8m2!3d49.0082411!4d8.374161!16s%2Fg%2F11h07vl_td target="_blank">Uhlandstraße 40, 76185 Karlsruhe</a>
                         </div>
                         <div class="contact-icon-text">
                             <span class="contact-icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                            <p><span>Telefonnummer</span> <br>0723 2317398</p>
+                            <p><span>Telefonnummer</span> <br><a href="tel:+497232317398">0721 47031901</a></p>
                         </div>
                         <div class="contact-icon-text">
                             <span class="contact-icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                            <p><span>Email</span> <br>team@duy-restaurant.de</p>
+                            <p><span>Email</span> <br><a href="mailto:mama@mamathanh.de">mama@mamathanh.de</a></p>
                         </div>
                         <div class="contact-icon-text">
                             <span class="contact-icon"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
@@ -263,13 +261,13 @@
                 </div>
             </div>
             <div class="col-md-12 col-sm-12 contact_info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4327.88907937501!2d8.570806074604727!3d48.945366046142624!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47970cf4c57c3cb3%3A0xde2b3ffddbb46b4f!2sDUY%20Asiatische%20Spezialit%C3%A4ten!5e0!3m2!1sde!2sde!4v1674581804583!5m2!1sde!2sde"
-                        width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10468.492794748394!2d8.374161!3d49.0082411!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47970762af2fd2c3%3A0x6f215123fd207b14!2sMama%20Thanh!5e0!3m2!1sde!2sde!4v1679003933310!5m2!1sde!2sde" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
 
+    <!-- gallery_part end -->
     <footer class="footer-part">
         <div class="footer-img">
             <img src="images/logo/logo.png" alt="">
@@ -279,21 +277,21 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="footer-text">
                         <span><i class="fa fa-phone" aria-hidden="true"></i></span>
-                        <p>0723 2317398</p>
+                        <p><a href="tel:+4972147031901">0721 47031901</a></p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <div class="footer-text">
                         <span><i class="fa fa-map-marker" aria-hidden="true"></i></span>
                         <p style="color: cornflowerblue; text-decoration: underline;"
-                           onclick="window.open('https://goo.gl/maps/pVBpS87D8KNEJ4e96', '_blank');">Nöttinger Str.
-                            11, 75196 Remchingen</p>
+                           onclick="window.open('https://www.google.com/maps/place/Mama+Thanh/@49.0082411,8.374161,15z/data=!4m6!3m5!1s0x47970762af2fd2c3:0x6f215123fd207b14!8m2!3d49.0082411!4d8.374161!16s%2Fg%2F11h07vl_td', '_blank');">
+                            Uhlandstraße 40, 76185 Karlsruhe</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <div class="footer-text">
                         <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                        <p>team@duy-restaurant.de</p>
+                        <p><a href="mailto:mama@mamathanh.de">mama@mamathanh.de</a></p>
                     </div>
                 </div>
             </div>
@@ -325,7 +323,7 @@
             </div>
         </div>
         <div class="copy_right">
-            <p>©2022 Duy's Restaurant. All Rights Reserved.</p>
+            <p>©2023 Mama Thanh GmbH. All Rights Reserved.</p>
             <a href="dsgvo.html">Datenschutz</a>
             <a href="impressum.html">Impressum</a>
         </div>
