--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="creative-wp">
 
     <!-- Titles========================== -->
-    <title>.:Duy's Asiatische Spezialitäten:.</title>
+    <title>.:Mama Thanh:.</title>
 
     <!-- Favicons========================= -->
     <link rel="shortcut icon" href="images/bg/favicon.png">
@@ -168,8 +168,8 @@
     <!-- banner part starts -->
     <section class="banner_part">
         <div class="banner_text">
-            <h1><b>Willkommen bei Duy's Restaurant!</b></h1>
-            <p><b>Genieße authentische asiatische Küche in unserem gemütlichen Familienbetrieb in Remchingen</b></p>
+            <h1><b>Willkommen bei Mama Thanh!</b></h1>
+            <p><b>Genieße authentische vietnamesische Küche in unserem gemütlichen Familienbetrieb in Karlsruhe</b></p>
             <div class="banner-btn">
                 <a href="Contact.html">Reservieren</a>
                 <a onclick="window.open('Contact.html', '_blank');">Abholen</a>
@@ -191,7 +191,7 @@
                 <div class="right_text">
                     <div class="text-pant">
                         <div style="margin-top: 3rem;" class="review-banner"
-                             onclick="window.open('https://goo.gl/maps/pVBpS87D8KNEJ4e96', '_blank');">
+                             onclick="window.open('https://www.google.com/maps/place/Mama+Thanh/@49.0082411,8.374161,15z/data=!4m6!3m5!1s0x47970762af2fd2c3:0x6f215123fd207b14!8m2!3d49.0082411!4d8.374161!16s%2Fg%2F11h07vl_td', '_blank');">
                             <div class="row" style="margin: .5rem">
                                 <img class="google-logo"
                                      src="images/logo/google-color-icon.svg"
@@ -208,17 +208,14 @@
                             </div>
                         </div>
                         <h1>Vietnamesische Gastfreundschaft...<br>
-                            bei Duy!</h1>
-                        <p>Duy hat seinen Traum verwirklicht und zusammen mit seiner Familie ein vietnamesisches
-                            Restaurant in Remchingen eröffnet. In Duy's Restaurant serviert er traditionelle
-                            Spezialitäten mit unverfälschten Zutaten und legt Wert auf Authentizität.
-                            Gäste schätzen die gemütliche Atmosphäre und die herzliche Gastfreundschaft der Familie.
-                        </p>
-                        <p>
-                            Duy und seine Familie kochen jederzeit frisch, um die bestmögliche Qualität zu gewährleisten.
-                            Sie achten auf hochwertige Produkte und integrieren diese in ihre
-                            Gerichte. Dies ermöglicht es ihnen, ihre Gäste mit einer Vielfalt an Aromen und Geschmäckern
-                            zu verwöhnen und ihnen eine authentische vietnamesische Küchenerfahrung zu bieten.
+                            bei Mama Thanh!</h1>
+                        <p>Das Wir freuen uns immer sehr auf den Besuch unserer Gäste. Wir haben den Wok bereits heiß
+                            gemacht, das Bier kühl gestellt, den Fisch filletiert und die Tische liebevoll gedeckt. Wir
+                            sind bereit, jeden Gast mit leckeren vietnamesischen Spezialitäten zu verwöhnen und ihnen
+                            einen unvergesslichen Abend zu bereiten. Wir sind stolz darauf, unsere Leidenschaft für die
+                            vietnamesische Küche mit unseren Gästen teilen zu können freuen uns darauf, sie bald in
+                            Karlsruhe am Gottesauer Platz begrüßen zu dürfen.
+
                         </p>
                     </div>
                 </div>
@@ -269,13 +266,18 @@
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <div class="die_text">
-                            <h1>Wir freuen uns über jeden Gast!</h1>
-                            <p>Duy freut sich immer sehr auf den Besuch seiner Gäste. Er hat den Wok bereits heiß
-                                gemacht, das Bier kühl gestellt und die Tische liebevoll gedeckt. Er und seine Familie
-                                sind bereit, ihre Gäste mit leckeren vietnamesischen Spezialitäten zu verwöhnen und
-                                ihnen einen unvergesslichen Abend zu bereiten. Duy ist stolz darauf, seine Leidenschaft
-                                für die vietnamesische Küche mit seinen Gästen teilen zu können und er freut sich
-                                darauf, sie bald in Remchingen und Wilferdingen-Singen begrüßen zu dürfen.
+                            <h1>Wer ist Mama Thanh?</h1>
+                            <p>Schon vor vielen Jahren zog es Mama Thanh aus ihrer Heimat Vietnam in die Ferne,
+                                neugierig und voller Tatendrang, im Gepäck die Leidenschaft fürs Kochen und das Wissen
+                                um die Besonderheiten der südvietnamnesischen Küche. Mit Mama Thanh in der Karlsruher
+                                Weststadt erfüllt sie sich nun ihren lang ersehnten Traum von einem eigenen Restaurant.
+                                Jedoch war der Weg sehr steinig, sei es der Koch, der kurz vor knapp abgesprungen ist
+                                oder die Speisekarten, die zu spät geliefert worden sind. Deshalb freut sich Mama Thanh
+                                umso mehr dich jetzt in der Uhlandstraße in Karlsruhe willkommen heißen zu können!
+
+                                Genieß deinen Aufenthalt, unsere Speisen und fühl dich wohl bei "Mama Thanh"!
+
+
                             </p>
                             </br>
                         </div>
@@ -296,9 +298,10 @@
                     <div class="right_text testimonial_text">
                         <div class="text-pant">
                             <h1>Rezensionen</h1>
-                            <p>Elias und ich haben Duy's Restaurant erst letzte Woche besucht und waren begeistert!
-                                Unser Highlight war der Thai Hotpot mit Erdnusssauce und Ente, es war unglaublich lecker
-                                und total aromatisch. Der Service war auch hervorragend, Duy und seine Familie waren
+                            <p>Elias und ich haben Mama Thanh's Restaurant erst letzte Woche besucht und waren
+                                begeistert!
+                                Unser Highlight war das super ausgefallene Sushi, es war unglaublich lecker
+                                und total frisch. Der Service war auch hervorragend, Mama Thanh und ihre Familie waren
                                 sehr gastfreundlich und haben sich Zeit genommen uns zu beraten. Wir können das
                                 Restaurant nur empfehlen und werden auf jeden Fall wiederkommen!</p>
                             <br>
@@ -315,7 +318,7 @@
                                 </div>
                             </div>
                             <div class="review-banner"
-                                 onclick="window.open('https://goo.gl/maps/pVBpS87D8KNEJ4e96', '_blank');">
+                                 onclick="window.open('https://www.google.com/maps/place/Mama+Thanh/@49.0082411,8.374161,15z/data=!4m6!3m5!1s0x47970762af2fd2c3:0x6f215123fd207b14!8m2!3d49.0082411!4d8.374161!16s%2Fg%2F11h07vl_td'_blank');">
                                 <div class="row" style="margin: .5rem">
                                     <img class="google-logo"
                                          src="images/logo/google-color-icon.svg"
@@ -416,21 +419,20 @@
                     <div class="col-md-4 col-sm-4">
                         <div class="footer-text">
                             <span><i class="fa fa-phone" aria-hidden="true"></i></span>
-                            <p>0723 2317398</p>
+                            <p><a href="tel:+4972147031901">0721 47031901</a></p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4">
                         <div class="footer-text">
                             <span><i class="fa fa-map-marker" aria-hidden="true"></i></span>
                             <p style="color: cornflowerblue; text-decoration: underline;"
-                               onclick="window.open('https://goo.gl/maps/pVBpS87D8KNEJ4e96', '_blank');">Nöttinger Str.
-                                11, 75196 Remchingen</p>
+                               onclick="window.open('https://www.google.com/maps/place/Mama+Thanh/@49.0082411,8.374161,15z/data=!4m6!3m5!1s0x47970762af2fd2c3:0x6f215123fd207b14!8m2!3d49.0082411!4d8.374161!16s%2Fg%2F11h07vl_td', '_blank');">Uhlandstraße 40, 76185 Karlsruhe</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4">
                         <div class="footer-text">
                             <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                            <p>team@duy-restaurant.de</p>
+                            <p><a href="mailto:mama@mamathanh.de">mama@mamathanh.de</a></p>
                         </div>
                     </div>
                 </div>
@@ -462,7 +464,7 @@
                 </div>
             </div>
             <div class="copy_right">
-                <p>©2022 Duy's Restaurant. All Rights Reserved.</p>
+                <p>©2023 Mama Thanh GmbH. All Rights Reserved.</p>
                 <a href="dsgvo.html">Datenschutz</a>
                 <a href="impressum.html">Impressum</a>
             </div>
